--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=${port:9002}
 #spring.datasource.name=comlnl
 #spring.datasource.url=jdbc:mysql://localhost:3306/springboot
-spring.datasource.url=jdbc:mysql://mysqldb:3306/votingapp
+spring.datasource.url=jdbc:mysql://localhost:3306/votingapp
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
