--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=${port:9002}
 #spring.datasource.name=comlnl
 #spring.datasource.url=jdbc:mysql://localhost:3306/springboot
 spring.datasource.url=jdbc:mysql://localhost:3306/votingapp
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.username=votingapp
+spring.datasource.password=votingapp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
