--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3'
 services:
   # Spring Boot application container
   spring-app:
@@ -11,8 +11,9 @@ services:
   mysqldb:
     image: "mysql:8.0"
     environment:
+      MYSQL_ROOT_PASSWORD: votingapp
       MYSQL_DATABASE: votingapp
       MYSQL_USER: votingapp
       MYSQL_PASSWORD: votingapp
     ports:
-      - "3307:3306"  # Map container port to host port
+      - "3306:3306"  # Map container port to host port
