--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,16 @@
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>8.0.29</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-docker-compose -->
+                <dependency>
+                     <groupId>org.springframework.boot</groupId>
+                     <artifactId>spring-boot-docker-compose</artifactId>
+                     <version>3.1.1</version>
+                </dependency>
 		<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-data-jdbc</artifactId>
-</dependency>
+                     <groupId>org.springframework.boot</groupId>
+                     <artifactId>spring-boot-starter-data-jdbc</artifactId>
+                </dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
