--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,26 @@
-version: '3'
+version: '3.1'
 services:
-  # Spring Boot application container
-  spring-app:
-    build:
-      context: .  # Build from the current directory
-      dockerfile: Dockerfile
-    ports:
-      - "9002:9002"  # Map container port to host port
-  # MySQL database container
-  mysqldb:
-    image: "mysql:8.0"
+  db:
+    image: mysql:8.0
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: votingapp
       MYSQL_DATABASE: votingapp
       MYSQL_USER: votingapp
-      MYSQL_PASSWORD: votingapp
-      SPRING.DATASOURCE.URL: jdbc:mysql://mysqldb:3306/votingapp?allowPublicKeyRetrieval=true 
-    depends_on:
-      - mysqldb
+      MYSQL_PASSWORD: password
     ports:
-      - "3307:3306"  # Map container port to host port
+      - 3307:3306
+  web:
+    image: votingapp
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 9002:9002
+    depends_on:
+      - db
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/votingapp
+      SPRING_DATASOURCE_USERNAME: votingapp
+      SPRING_DATASOURCE_PASSWORD: password
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
